--- a/meta/main.yml
+++ b/meta/main.yml
@@ -21,12 +21,12 @@ galaxy_info:
 
 dependencies:
   - {
-    role: awscli
-    src: 'https://github.com/dpujadas/ansible-role-awscli.git'
-    scm: git
-    version: master
-    awscli_user: '{{ cloudwatch_put_user }}'
-    awscli_access_key: '{{ cloudwatch_put_access_key }}'
-    awscli_secret_key: '{{ cloudwatch_put_secret_key }}'
+    role: awscli,
+    src: 'https://github.com/dpujadas/ansible-role-awscli.git',
+    scm: git,
+    version: master,
+    awscli_user: '{{ cloudwatch_put_user }}',
+    awscli_access_key: '{{ cloudwatch_put_access_key }}',
+    awscli_secret_key: '{{ cloudwatch_put_secret_key }}',
     awscli_region: '{{ cloudwatch_put_region }}'
   }
